syntax = "proto3";

package proto;

import "product.proto";

service UserService {
    rpc AddProduct (AddProductRequest) returns (AddProductResponse) {}
    rpc getProducts (GetProductsRequest) returns (GetProductsResponse) {}
    rpc deleteProduct (DeleteProductRequest) returns (DeleteProductResponse) {}
}

// Add product messages
message AddProductRequest {
    int64 productId = 1;
    int64 userId = 2;
}

message AddProductResponse {
    string productId = 1;
}

// Get product messages
message GetProductsRequest {
    string userId = 1;
}

message GetProductsResponse {
    repeated ProductReply products = 1;
}

// Delete product messages
message DeleteProductRequest {
    int64 userId = 1;
    int64 productId = 2;
}

message DeleteProductResponse {
    string productId = 1;
}
